--- a/vc/mtunnel.vcxproj.filters
+++ b/vc/mtunnel.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="..\src\tunnel\tunnel_conf.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\tunnel\tunnel_cmd.h" />
@@ -83,5 +86,6 @@
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_url.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
     <ClInclude Include="..\src\tunnel\tunnel_conf.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
   </ItemGroup>
 </Project>
