--- a/vc/mtunnel.vcxproj.filters
+++ b/vc/mtunnel.vcxproj.filters
@@ -19,15 +19,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\tunnel\tunnel_cmd.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\tunnel\tunnel_local.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\utils\utils_misc.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_rc4.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -46,9 +37,6 @@
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_time.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_conf.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_str.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -61,17 +49,23 @@
     <ClCompile Include="..\vendor\m_net\src\mnet_core.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\tunnel\tunnel_conf.c">
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c">
+    <ClCompile Include="..\src\tunnel_cmd.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\tunnel_conf.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\tunnel_local.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\tunnel\tunnel_cmd.h" />
-    <ClInclude Include="..\src\tunnel\tunnel_local.h" />
-    <ClInclude Include="..\src\utils\utils_misc.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_rc4.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_buf.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
@@ -81,11 +75,12 @@
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_os.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_time.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_type.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_conf.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_str.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_url.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
-    <ClInclude Include="..\src\tunnel\tunnel_conf.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
+    <ClInclude Include="..\src\tunnel_cmd.h" />
+    <ClInclude Include="..\src\tunnel_conf.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_args.h" />
   </ItemGroup>
 </Project>
