--- a/vc/mtun_remote.vcxproj
+++ b/vc/mtun_remote.vcxproj
@@ -21,36 +21,44 @@
   <ItemGroup>
     <ClCompile Include="..\src\tunnel_cmd.c" />
     <ClCompile Include="..\src\tunnel_conf.c" />
-    <ClCompile Include="..\src\tunnel_local.c" />
+    <ClCompile Include="..\src\tunnel_dns.c" />
+    <ClCompile Include="..\src\tunnel_remote.c" />
+    <ClCompile Include="..\vendor\m_dnscnt\src\mdns_cnt.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_prng.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_rc4.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_buf.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_debug.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_list.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_mem.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\model\m_skiplist.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\model\m_timer.c" />
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_time.c" />
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_type.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_str.c" />
-    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_url.c" />
     <ClCompile Include="..\vendor\m_net\src\mnet_core.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\mfoundation_import.h" />
     <ClInclude Include="..\src\tunnel_cmd.h" />
     <ClInclude Include="..\src\tunnel_conf.h" />
+    <ClInclude Include="..\src\tunnel_dns.h" />
+    <ClInclude Include="..\vendor\m_dnscnt\src\mdns_cnt.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_prng.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_rc4.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_buf.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_list.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_mem.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\plat\plat_lock.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\model\m_skiplist.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\model\m_timer.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_os.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_time.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_type.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_args.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_str.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_url.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -61,6 +69,7 @@
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>mtunnel</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>tun_remote</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -118,7 +127,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\src\utils;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_dnscnt\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -126,7 +135,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\src\utils;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_dnscnt\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -149,7 +158,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;TEST_TUNNEL_LOCAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;TEST_TUNNEL_REMOTE;TEST_TUNNEL_DNS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile />
       <CompileAs>CompileAsCpp</CompileAs>
@@ -176,7 +185,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>NDEBUG;TEST_TUNNEL_LOCAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;TEST_TUNNEL_REMOTE;TEST_TUNNEL_DNS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile />
       <CompileAs>CompileAsCpp</CompileAs>
