--- a/vc/mtun_remote.vcxproj.filters
+++ b/vc/mtun_remote.vcxproj.filters
@@ -40,9 +40,6 @@
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_str.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_url.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_type.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -55,13 +52,28 @@
     <ClCompile Include="..\src\tunnel_cmd.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_prng.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\model\m_skiplist.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\model\m_timer.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\tunnel_conf.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\tunnel_local.c">
+    <ClCompile Include="..\src\tunnel_dns.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c">
+    <ClCompile Include="..\src\tunnel_remote.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_dnscnt\src\mdns_cnt.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -71,16 +83,20 @@
     <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_list.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_mem.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\plat\plat_lock.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_os.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_time.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_type.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_str.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_url.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
     <ClInclude Include="..\src\tunnel_cmd.h" />
-    <ClInclude Include="..\src\tunnel_conf.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_args.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_prng.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\model\m_skiplist.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\model\m_timer.h" />
+    <ClInclude Include="..\src\mfoundation_import.h" />
+    <ClInclude Include="..\src\tunnel_conf.h" />
+    <ClInclude Include="..\src\tunnel_dns.h" />
+    <ClInclude Include="..\vendor\m_dnscnt\src\mdns_cnt.h" />
   </ItemGroup>
 </Project>
