--- a/vc/mtun_local.vcxproj
+++ b/vc/mtun_local.vcxproj
@@ -22,11 +22,12 @@
     <ClCompile Include="..\src\tunnel_cmd.c" />
     <ClCompile Include="..\src\tunnel_conf.c" />
     <ClCompile Include="..\src\tunnel_local.c" />
+    <ClCompile Include="..\vendor\fastlz\fastlz.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_chacha20.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_prng.c" />
-    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_rc4.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_sha256.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_buf.c" />
-    <ClCompile Include="..\vendor\m_foundation\src\model\m_debug.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_list.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_mem.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_skiplist.c" />
@@ -34,18 +35,22 @@
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_time.c" />
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_type.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_debug.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_str.c" />
     <ClCompile Include="..\vendor\m_net\src\mnet_core.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\mfoundation_import.h" />
     <ClInclude Include="..\src\tunnel_cmd.h" />
+    <ClInclude Include="..\src\tunnel_compress.h" />
     <ClInclude Include="..\src\tunnel_conf.h" />
+    <ClInclude Include="..\vendor\fastlz\fastlz.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20_priv.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_prng.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_rc4.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_sha256.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_buf.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_list.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_mem.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_skiplist.h" />
@@ -54,6 +59,7 @@
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_time.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_type.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_args.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_str.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
   </ItemGroup>
@@ -123,7 +129,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(ProjectDir)\..\vendor\fastlz;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -131,7 +137,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(ProjectDir)\..\vendor\fastlz;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -185,6 +191,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile />
       <CompileAs>CompileAsCpp</CompileAs>
+      <CallingConvention>Cdecl</CallingConvention>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
