--- a/vc/mtun_remote.vcxproj
+++ b/vc/mtun_remote.vcxproj
@@ -23,12 +23,14 @@
     <ClCompile Include="..\src\tunnel_conf.c" />
     <ClCompile Include="..\src\tunnel_dns.c" />
     <ClCompile Include="..\src\tunnel_remote.c" />
+    <ClCompile Include="..\vendor\fastlz\fastlz.c" />
     <ClCompile Include="..\vendor\m_dnscnt\src\mdns_cnt.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_chacha20.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_cprng.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_md5.c" />
     <ClCompile Include="..\vendor\m_foundation\src\crypto\m_prng.c" />
-    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_rc4.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_sha256.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_buf.c" />
-    <ClCompile Include="..\vendor\m_foundation\src\model\m_debug.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_list.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_mem.c" />
     <ClCompile Include="..\vendor\m_foundation\src\model\m_skiplist.c" />
@@ -36,6 +38,7 @@
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_time.c" />
     <ClCompile Include="..\vendor\m_foundation\src\plat\plat_type.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_args.c" />
+    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_debug.c" />
     <ClCompile Include="..\vendor\m_foundation\src\utils\utils_str.c" />
     <ClCompile Include="..\vendor\m_net\src\mnet_core.c" />
   </ItemGroup>
@@ -44,12 +47,15 @@
     <ClInclude Include="..\src\tunnel_cmd.h" />
     <ClInclude Include="..\src\tunnel_conf.h" />
     <ClInclude Include="..\src\tunnel_dns.h" />
+    <ClInclude Include="..\vendor\fastlz\fastlz.h" />
     <ClInclude Include="..\vendor\m_dnscnt\src\mdns_cnt.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20_priv.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_cprng.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_md5.h" />
     <ClInclude Include="..\vendor\m_foundation\src\crypto\m_prng.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_rc4.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_sha256.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_buf.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_list.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_mem.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_skiplist.h" />
@@ -58,6 +64,7 @@
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_time.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_type.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_args.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\utils\utils_str.h" />
     <ClInclude Include="..\vendor\m_net\src\mnet_core.h" />
   </ItemGroup>
@@ -135,7 +142,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_dnscnt\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\src;$(ProjectDir)\..\src\tunnel;$(ProjectDir)\..\vendor\m_net\src;$(ProjectDir)\..\vendor\m_dnscnt\src;$(ProjectDir)\..\vendor\m_foundation\src\model;$(ProjectDir)\..\vendor\m_foundation\src\plat;$(ProjectDir)\..\vendor\m_foundation\src\crypto;$(ProjectDir)\..\vendor\m_foundation\src\utils;$(ProjectDir)\..\vendor\fastlz;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
