--- a/vc/mtun_remote.vcxproj.filters
+++ b/vc/mtun_remote.vcxproj.filters
@@ -19,13 +19,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_rc4.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\vendor\m_foundation\src\model\m_buf.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vendor\m_foundation\src\model\m_debug.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="..\vendor\m_foundation\src\model\m_list.c">
@@ -76,11 +70,24 @@
     <ClCompile Include="..\vendor\m_dnscnt\src\mdns_cnt.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\vendor\fastlz\fastlz.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_chacha20.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_sha256.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\utils\utils_debug.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\m_foundation\src\crypto\m_cprng.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_rc4.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_buf.h" />
-    <ClInclude Include="..\vendor\m_foundation\src\model\m_debug.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_list.h" />
     <ClInclude Include="..\vendor\m_foundation\src\model\m_mem.h" />
     <ClInclude Include="..\vendor\m_foundation\src\plat\plat_os.h" />
@@ -98,5 +105,11 @@
     <ClInclude Include="..\src\tunnel_conf.h" />
     <ClInclude Include="..\src\tunnel_dns.h" />
     <ClInclude Include="..\vendor\m_dnscnt\src\mdns_cnt.h" />
+    <ClInclude Include="..\vendor\fastlz\fastlz.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_chacha20_priv.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_sha256.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\utils\utils_debug.h" />
+    <ClInclude Include="..\vendor\m_foundation\src\crypto\m_cprng.h" />
   </ItemGroup>
 </Project>
